k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financial-reconciliation-svc
  namespace: financial-app
  labels:
    app: financial-reconciliation
spec:
  type: NodePort
  selector:
    app: financial-reconciliation
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8501
      nodePort: 30001
